metadata/objects/fragment2__c.object
<CustomObject>
    <fields>
        <fullName>Checkbox10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula100__c</fullName>
        <formula>true</formula>
        <label>Formula100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula63__c</fullName>
        <formula>true</formula>
        <label>Formula63</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula64__c</fullName>
        <formula>true</formula>
        <label>Formula64</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LongTextArea52__c</fullName>
        <label>LongTextArea52</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea53__c</fullName>
        <label>LongTextArea53</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea54__c</fullName>
        <label>LongTextArea54</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number27__c</fullName>
        <label>Number27</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number28__c</fullName>
        <label>Number28</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number29__c</fullName>
        <label>Number29</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>fragment2</label>
    <nameField>
        <displayFormat>fragment2-{0000000}</displayFormat>
        <label>fragment2 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>fragment2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>